pyDSO: fix screenshot

--- a/python_usb_control/graphical_py_app/ui/dso.ui
+++ b/python_usb_control/graphical_py_app/ui/dso.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>pyDSO150</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QGraphicsView" name="graphicsView">
